# FanPulse_Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  weekly_digest_job.py
components/fanpulse_phone/: index.html
docs/: PROJECT_DOCUMENTATION.md
docs/architecture/: fanpulse_documentation_1.html
docs/superpowers/plans/: 2026-06-16-fanpulse-ai-streamlit.md  2026-06-17-fanpulse-multi-provider-sports-tools.md  2026-06-17-official-schedule-search.md
docs/superpowers/specs/: 2026-06-16-fanpulse-ai-streamlit-design.md  2026-06-17-fanpulse-multi-provider-sports-tools-design.md  2026-06-17-official-schedule-search-design.md
src/fanpulse_agent/: __init__.py  agent.py  agent_planner.py  apifootball_client.py  apisports_basketball_client.py  apisports_formula1_client.py  database.py  entity_extraction.py  llm_reasoning.py  main.py  models.py  official_schedule.py  serpapi_client.py  sportsdb_client.py  tools.py  twilio_whatsapp_client.py  ui_state.py
tests/: test_agent_flow.py  test_apifootball_client.py  test_entity_extraction.py  test_multi_provider_tools.py  test_official_schedule.py  test_phone_component.py  test_sportsdb_client.py  test_twilio_whatsapp.py  test_ui_state.py
