[project]
name = "fanpulse_agent"
version = "0.1.0"
description = "Weekly WhatsApp sponsor digest agent"
authors = [
    { name = "mnsrhz" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "streamlit>=1.35.0",
    "pytest>=8.0.0",
]
